caller-service/k8s/istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: caller-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "caller.example.com"
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: caller-service-destination
spec:
  host: caller-service
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: caller-service-route
spec:
  hosts:
#    - "caller.example.com"
    - "*"
  gateways:
    - caller-gateway
  http:
    - route:
        - destination:
            host: caller-service
            subset: v1
#      corsPolicy:
#        allowOrigin:
#          - "*"
#      corsPolicy:
#      corsPolicy:
#        maxAge: 1m
#        allowCredentials: true
#        allowHeaders:
#          - foo
#          - bar
#        allowMethods:
#          - GET
#  http:
#    - corsPolicy:
#        allowHeaders:
#          - Authorization
#          - Content-Type
#        allowMethods:
#          - POST
#          - GET
#          - PUT
#          - PATCH
#          - DELETE
#        allowOrigins:
#          - exact: *
#      match:
#        - gateways:
#            - api-gateway
#          method:
#            regex: GET|OPTIONS
#          uri:
#            regex: *
#      route:
#        - destination:
#            host: caller-service
#            subset: v1
#      timeout: 0.5s # - to enable if using Istio fault on callme-service route
